<resources>
    <string name="app_name">DrawApp</string>
    <string name="loading">Loading...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_x2">Password x2</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="user_table">users</string>
    <string name="checking_for_account_data">Checking for account data</string>
    <string name="you_don_t_have_friends_yet">You don\'t have friends yet!</string>
    <string name="add_friend">Add friend</string>
    <string name="friend_invites">Friend Invites</string>
    <string name="name">Name</string>
    <string name="there_re_no_friend_requests">There\'re no friend requests!</string>
    <string name="accept_button_for_friend_invite">Accept button for friend invite</string>
    <string name="decline_button_for_friend_inve">Decline button for friend inve</string>
    <string name="join">Join</string>
    <string name="i_already_have_an_account">I already have an account!</string>
    <string name="ok">OK</string>
    <string name="what_is_it">What is it?</string>
    <string name="what_was_the_original_word">What was the original word?</string>
    <string name="i_don_t_have_an_account_yet">I don\'t have an account yet!</string>
    <string name="connect_with_your_friends">Connect with your Friends!</string>
    <string name="connect_desc">You can easily add new friends and enjoy the game with them! Invite them or join to to them, its super easy!</string>
    <string name="friends">Friends</string>
    <string name="play_the_game">Play the game!</string>
    <string name="play_the_game_desc">You are one tap away from playing. What are you waiting for?</string>
    <string name="host_game">Host game</string>
    <string name="join_game">Join Game</string>
    <string name="lobby_details">Lobby Details:</string>
    <string name="code">Code:</string>
    <string name="qwzefmp">QWZEFMP</string>
    <string name="players">Players:</string>
    <string name="_0_6">0/6</string>
</resources>