<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login_fragment.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_margin="32dp"
        app:cardCornerRadius="22dp"
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:padding="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:layout_marginVertical="10dp"
                android:id="@+id/username"
                android:padding="10dp"
                android:background="@drawable/edit_bg"
                android:backgroundTint="@color/backgroundColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:fontFamily="@font/roboto_bold"
                android:drawableStart="@drawable/ic_baseline_person_24" />

            <EditText
                android:layout_marginVertical="10dp"
                android:id="@+id/password"
                android:padding="10dp"
                android:backgroundTint="@color/backgroundColor"
                android:background="@drawable/edit_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto_bold"
                android:drawableStart="@drawable/ic_baseline_lock_24" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:textSize="19sp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:drawableStart="@drawable/ic_baseline_open_in_new_24"
                android:padding="10dp"
                android:paddingEnd="20dp"
                android:drawableTint="@android:color/white"
                style="@style/GreenButton"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/waves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_waves"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:padding="20dp"
            android:background="#0099FF"
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:text="I don't have an account yet!"/>

    <ProgressBar
        android:id="@+id/loading_bar"
        tools:visibility="visible"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        android:indeterminateDrawable="@drawable/rotate_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>